src/test/ui/rfc-2093-infer-outlives/enum.stderr
error: rustc_outlives
  --> $DIR/enum.rs:9:1
   |
LL | / enum Foo<'a, T> {
LL | |     One(Bar<'a, T>)
LL | | }
   | |_^
   |
   = note: T : 'a

error: rustc_outlives
  --> $DIR/enum.rs:15:1
   |
LL | / struct Bar<'b, U> {
LL | |     field2: &'b U
LL | | }
   | |_^
   |
   = note: U : 'b

error: rustc_outlives
  --> $DIR/enum.rs:21:1
   |
LL | / enum Ying<'c, K> {
LL | |     One(&'c Yang<K>)
LL | | }
   | |_^
   |
   = note: K : 'c

error: aborting due to 3 previous errors

